--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head> <h1>this is the first github pages 搭建的个人站点</h1></head>
 <body>
 <h1>这是我使用github pages搭建的个人站点。</h1>
 </body>
