--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head> <h1>this is the first github pages 搭建的个人站点</h1></head>
+<head> <h1>Welcome to liudongming's web</h1></head>
 <body>
-<h1>这是我使用github pages搭建的个人站点。</h1>
+<h1>github pages</h1>
 </body>
 </html>
