--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     var bIsCE = sUserAgent.match(/windows ce/i) == "windows ce";
     var bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";
     if (!(bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) ){
-        window.location.href="http://blog.csdn.net/u013985228";
+        window.location.href="http://192.168.0.109:8080/wordpress/";//http://blog.csdn.net/u013985228
     } else {
-        window.location.href="http://m.blog.csdn.net/blog/index?username=u013985228";
+        window.location.href="http://192.168.0.109:8080/wordpress/";
     }
 }
 browserRedirect();
