--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<title>Responsive 'Flat Profile' HTML Portfolio Template</title>
+	<title>欢迎来到DongMingLiu我的主页</title>
 	<link href="css/demo.css" rel="stylesheet" type="text/css">
 	 <link rel="stylesheet" href="css/jqbar.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -37,7 +37,7 @@
 						<ul>
 							<li>
 								<img src="img/about-icon.png">
-								<a href="index.html">About Me</a>
+								<a href="index.html">关于我</a>
 							</li>
 							<li>
 								<img src="img/portfolio-icon.png">
@@ -49,7 +49,7 @@
 							</li>
 							<li>
 								<img src="img/contact-icon.png">
-								<a href="contact.html">Contact</a>
+								<a href="contact.html">联系我</a>
 							</li>
 						</ul>
 					</div>
@@ -63,7 +63,7 @@
 					<div class="font16">Co-founder at <span class="greentext"><a href="#">EGrappler</a></span></div>
 				</div>
 				<div class="desciption home">
-					<p>Known as Johny, I am a web designer and <span class="rotate greentext">WordPress Theme Designer, WordPress Theme Developer</span> living in Pakistan with my wife and two kids. I‘m an active author at Themeforest where I enjoy spending my day in Photoshop converting custom designs into fancy pants <span class="greentext">Custom WordPress Themes</span>.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+					<p>你好，这里是东铭的个人空间， <span class="rotate greentext">WordPress Theme Designer, WordPress Theme Developer</span> living in Pakistan with my wife and two kids. I‘m an active author at Themeforest where I enjoy spending my day in Photoshop converting custom designs into fancy pants <span class="greentext">Custom WordPress Themes</span>.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
 				</div>	
 				<div class="row">
 					<div class="span12">					
