--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 					<div class="span6">
                     	<div class="user-tip"><img src="img/img-tip.png" alt="" /></div>
 						<div id="bars-content">
-							<div  class="content" id="content-1">HTML5 is a markup language used for structuring and presenting content for the World Wide Web and a core technology of the Internet.</div>
-							<div  class="content" id="content-2">CSS is a style sheet language used for describing the presentation semantics  of a document written in a markup language.</div>
-							<div  class="content" id="content-3">As part of web browsers, implementations allow client-side scripts to interact with the user and control the browser.</div>
-							<div  class="content" id="content-4">WordPress is an open source blogging tool and a CMS based on PHP and MySQL, which runs on a web hosting service.</div>
+							<div  class="content" id="content-1">毕业后第一份工作为安卓开发，现今24岁，期间做便民热线app，养老产业生态app，参与政府办公app企划，有了一些经验。工作后一年半主要精力参与养老产业事业，进行软硬件平台开发对接，刷卡设备取电，全国各地养老平台的实施布置，接触了很多安卓之外的东西，这些经历说不好是耽误很多技术工作还是学到很多生活实践、丰富非专业知识等，但确实了解了养老行业的最新最全的动态。继续干下去尚可，但内心有所波兰，觉着趁年轻还是想围绕技术的篝火起舞。</div>
+							<div  class="content" id="content-2">大学学了很多，学到安卓的时候便想毕业后找工作也找在安卓上，姑且安卓算作主业了，随时随地的更新学习是学习技术最好的手段，也是必要手段，每一个技术行业不能不学习，不然十年桌面程序开发的人一定会枯竭穷尽。所以尽管因为工作耽搁了它，但从现在开始的学习，重拾并更新，让我的安卓水平更胜一筹，总是不晚的。那时候我便能重新加入安卓开发的大军中，为未来技术做贡献。</div>
+							<div  class="content" id="content-3">大数据时代，对于数据的感官不能缺失。想当初，人们的线下行为还是需要各行各业分行汇总，甚至企业间单独汇总在公布的行为，而互联网时代每个人都可以代表一个个体，数据汇总在当时不敢想象在现在确正在发生，那些大企业的年终总结，透漏出人们平时衣食住行等等更方面的蛛丝马迹。网易云音乐的推歌喜好年度音乐总结，支付宝的年度账单花销，分门别类清晰可见。阿尔法GO的围棋技术，无人驾驶的上路测试，智能机器人的高智慧发展等等这些，只能感叹未来世界的发展让人心潮澎湃。</div>
+							<div  class="content" id="content-4">通晓PS制作修图，PR剪辑合成调视频加特效，AE做特效片头宣传片，建站包建站asp.net php等企业政府网站制作，移动html5企业宣传，个人简历，政府报告等制作，小通asp.net,php等语言.精通Office，音频剪辑合成，喜爱新事物，爱尝试。最后学习使我快乐！</div>
 							<div  class="content" id="content-5">A quick brown fox jumps over the lazy dog. A quick brown fox jumps over the lazy dog. A quick brown fox jumps over the lazy dog.</div>
 							<div  class="content" id="content-6">A quick brown fox jumps over the lazy dog. A quick brown fox jumps over the lazy dog. A quick brown fox jumps over the lazy dog.</div>
 						</div>
@@ -134,11 +134,11 @@
 	<script type="text/javascript">
 	 $(document).ready(function () {			
 		
-            $('#bar-1').jqbar({ label: 'Android', value: 80, barColor: '#21ba82' });
+            $('#bar-1').jqbar({ label: '我的经验', value: 80, barColor: '#21ba82' });
 
-            $('#bar-2').jqbar({ label: 'Html5', value: 99, barColor: '#21ba82' });
+            $('#bar-2').jqbar({ label: 'Android', value: 99, barColor: '#21ba82' });
 
-            $('#bar-3').jqbar({ label: '数据库', value: 85, barColor: '#21ba82' });
+            $('#bar-3').jqbar({ label: 'data', value: 85, barColor: '#21ba82' });
 
             $('#bar-4').jqbar({ label: 'others', value: 75, barColor: '#21ba82' });
 
