--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
 						<ul>
 							<li>
 								<img src="img/about-icon.png">
-								<a href="index.html">关于我</a>
+								<a href="index.html">知道我是谁？</a>
 							</li>
 							<li>
 								<img src="img/portfolio-icon.png">
-								<a href="portfolio.html">Portfolio</a>
+								<a href="portfolio.html">一些小“做作”！</a>
 							</li>
 							<li>
 								<img src="img/followme-icon.png">
-								<a href="follow.html">Follow Me</a>
+								<a href="follow.html">听说你要了解我？</a>
 							</li>
 							<li>
 								<img src="img/contact-icon.png">
-								<a href="contact.html">联系我</a>
+								<a href="contact.html">来些建议吧</a>
 							</li>
 						</ul>
 					</div>
 				</div> 			
 			</div>
-            <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" title="模板之家">模板之家</a></div>
+            <div class="copyrights">Collect from <a href="http://ldongming.top/" title="刘东铭（DongMingLiu）">刘东铭（DongMingLiu）</a></div>
 
 			<div class="span7 homeabout">
 				<div class="person">
