--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portfolio - Responsive 'Flat Profile' HTML Portfolio Template</title>
+<title>作品街-逛逛我的街</title>
 <link href="css/demo.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
@@ -26,27 +26,28 @@
       <div class="navigation">
         <div>
           <ul>
-            <li> <img src="img/about-icon.png"> <a href="index.html">About Me</a> </li>
-            <li> <img src="img/portfolio-icon.png"> <a href="portfolio.html">Portfolio</a> </li>
-            <li> <img src="img/followme-icon.png"> <a href="follow.html">Follow Me</a> </li>
-            <li> <img src="img/contact-icon.png"> <a href="contact.html">Contact</a> </li>
+            <li> <img src="img/about-icon.png"> <a href="index.html">知道我是谁？</a> </li>
+            <li> <img src="img/portfolio-icon.png"> <a href="portfolio.html">一些小“做作”！</a> </li>
+            <li> <img src="img/followme-icon.png"> <a href="follow.html">听说你要了解我？</a> </li>
+            <li> <img src="img/contact-icon.png"> <a href="contact.html">来些建议吧</a> </li>
           </ul>
         </div>
       </div>
     </div>
     <div class="span7 homeabout">
-      <div class="person"> <span class="name">Portfolio</span> </div>
+      <div class="person"> <span class="name">作品集</span> </div>
       <div class="desciption">
-        <p class="font16">I am available for freelance work. Fill in the form to discuss a project.</p>
+        <p class="font16">红酥手，黄藤酒，满城春色宫墙柳。</p>
       </div>
       <div id="portfolio" class="white">
         <ul id="portfolio-filter">
-          <li><a href="#" class="current" data-filter="*">All</a></li>
-          <li><a href="#" data-filter=".webdesign">WebDesign</a></li>
-          <li><a href="#" data-filter=".photoghraphy">Photoghraphy</a></li>
-          <li><a href="#" data-filter=".illustration">Illustration</a></li>
-          <li><a href="#" data-filter=".print">Print</a></li>
-          <li><a href="#" data-filter=".animation">Animation</a></li>
+          <li><a href="#" class="current" data-filter="*">所有</a></li>
+          <li><a href="#" data-filter=".webdesign">网页设计</a></li>
+          <li><a href="#" data-filter=".photoghraphy">ADOBE系列设计</a></li>
+          <li><a href="#" data-filter=".illustration">安卓开发</a></li>
+          <li><a href="#" data-filter=".print">数据库小节</a></li>
+          <li><a href="#" data-filter=".animation">动画渲染</a></li>
+		  <li><a href="#" data-filter=".poetry">诗歌秀</a></li>
         </ul>
         <ul id="portfolio-list">
           <li class="illustration print">
@@ -54,7 +55,7 @@
               <div class="flipper"><a href="img/portfolio/1.jpg" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis mi eu elit tempor facilisis id et neque" rel="portfolio" class="folio">
                 <div class="front">  <img src="img/portfolio/1-thumb.jpg" alt=""> </div>
                 <div class="back">
-                  <h4>Heading</h4>
+                  <h4>head1</h4>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 
@@ -170,6 +171,19 @@
                 <div class="back">
                   <h4>Heading</h4>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                </a>
+              </div>
+            </div>
+          </li>
+		  <li class="poetry">
+            <div class="flip-container">
+              <div class="flipper">
+              <a href="img/portfolio/10.jpg" rel="portfolio" class="folio">
+                <div class="front">  <img src="img/portfolio/10-thumb.jpg" alt="" > </div>
+                <div class="back">
+                  <h4>初雪</h4>
+                  <p>那一年的第一场雪，留诗为念。——刘东铭</p>
                 </div>
                 </a>
               </div>
