--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<title>Contact Me - Responsive 'Flat Profile' HTML Portfolio Template</title>
+	<title>听说你要了解我？</title>
 	
 	<link href="css/demo.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -36,19 +36,19 @@
 						<ul>
 							<li>
 								<img src="img/about-icon.png">
-								<a href="index.html">About Me</a>
+								<a href="index.html">知道我是谁？</a>
 							</li>
 							<li>
 								<img src="img/portfolio-icon.png">
-								<a href="portfolio.html">Portfolio</a>
+								<a href="portfolio.html">一些小“做作”！</a>
 							</li>
 							<li>
 								<img src="img/followme-icon.png">
-								<a href="follow.html">Follow Me</a>
+								<a href="follow.html">听说你要了解我？</a>
 							</li>
 							<li>
 								<img src="img/contact-icon.png">
-								<a href="contact.html">Contact</a>
+								<a href="contact.html">来些建议吧</a>
 							</li>
 						</ul>
 					</div>
@@ -59,11 +59,11 @@
 
 			<div class="span7 homeabout">
 				<div class="person">
-					<span class="name">Contact Me</span>
+					<span class="name">建议我？</span>
 				</div>
 				<div class="desciption">
 				 
-					<p>I am available for freelance work. Fill in the form to discuss a project.</p>
+					<p>良药苦口，忠言逆耳。我不是皇上，我只是跟他一样不要脸。</p>
 				
 					<form action="#" method="post" id="form">
 						<div class="contact-form">
@@ -80,8 +80,8 @@
 							</div>
 						</div>
 					</form>					
-					<div id="success">You e-mail has been sent.</div>
-					<div id="error">Unable to process your required, please try later.</div>
+					<div id="success">你的邮件已经提交</div>
+					<div id="error">不能收到你的请求，请稍后再试吧。</div>
                 </div>	
 			</div>
 		</div>
