--- a/follow.html
+++ b/follow.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<title>关注我吧。	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<title>关注我吧。</title>	
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
 
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600' rel='stylesheet' type='text/css'>
@@ -69,7 +70,7 @@
                         <li><a href="#" class="icon iconin"><span class="icon-linkedin"></span></a> <span class="socialvalue">352</span></li>
                     </ul>
                     
-                    <p>你仍有些想做的想说的想交流的，那么你可以。。。</p>
+                    <p>你仍有些想做的想说的想交流的，那么</p>
                     <ul class="social-stats clearfix">
                     	<li><a href="#" class="icon iconr roll"><span class="icon-rss"></span></a> <span class="socialvalue">352</span></li>
                     </ul>
