--- a/portfolio.html
+++ b/portfolio.html
@@ -183,7 +183,7 @@
                 <div class="front">  <img src="img/portfolio/10-thumb.jpg" alt="" > </div>
                 <div class="back">
                   <h4>初雪</h4>
-                  <p>那一年的第一场雪，留诗为念。——刘东铭</p>
+                  <p>燕孤非飞落，木枯独舞迫。本为入霞里，夜转白花弱。</p>
                 </div>
                 </a>
               </div>
