--- a/follow.html
+++ b/follow.html
@@ -35,19 +35,19 @@
 						<ul>
 							<li>
 								<img src="img/about-icon.png">
-								<a href="index.html">知道我是谁？</a>
+								<a href="index.html">关于作者</a>
 							</li>
 							<li>
 								<img src="img/portfolio-icon.png">
-								<a href="portfolio.html">一些小“做作”！</a>
+								<a href="portfolio.html">TIPS1</a>
 							</li>
 							<li>
 								<img src="img/followme-icon.png">
-								<a href="follow.html">听说你要了解我？</a>
+								<a href="follow.html">TIPS2</a>
 							</li>
 							<li>
 								<img src="img/contact-icon.png">
-								<a href="contact.html">来些建议吧</a>
+								<a href="contact.html">TIPS3</a>
 							</li>
 						</ul>
 					</div>
@@ -64,8 +64,8 @@
 					<p>你可以从这些地方关注我，联系我。</p>
                     
                     <ul class="social-stats clearfix">
-                    	<li><a href="#" class="icon iconf"><span class="icon-facebook"></span></a> <span class="socialvalue">352</span></li>
-                        <li><a href="#" class="icon icont"><span class="icon-twitter"></span></a> <span class="socialvalue">352</span></li>
+                    	<li><a href="#" class="icon iconf"><span class="icon-facebook"></span></a> <span class="socialvalue">1022</span></li>
+                        <li><a href="#" class="icon icont"><span class="icon-twitter"></span></a> <span class="socialvalue">1221</span></li>
                         <li><a href="#" class="icon icong"><span class="icon-google-plus"></span></a> <span class="socialvalue">352</span></li>
                         <li><a href="#" class="icon iconin"><span class="icon-linkedin"></span></a> <span class="socialvalue">352</span></li>
                     </ul>
