--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="span7 homeabout">
 				<div class="person">
 					<span class="name">刘东铭（DongMingLiu）</span>
-					<div class="font16">创建者（Co-founder at） <span class="greentext"><a href="#">EGrappler</a></span></div>
+					<div class="font16">创建者（Co-founder at） <span class="greentext"><a href="#">LDM</a></span></div>
 				</div>
 				<div class="desciption home">
 					<p>你好，这里是东铭的个人空间，很奇怪你是为何点到了这里，不过有道是有缘千里相聚，来者为客，再次允许我满怀热情的欢迎你的到来。 <span class="rotate greentext">在下是个地道的保定人，</span>保定乃京畿重地，吃货天堂，驴肉火烧在我心中美食的主宰一直是我心中的骄傲。有道是“上有天堂，下有驴肉火烧”，真是好诗好诗啊~<span class="greentext">虽为小城市，且生于斯长于斯，但眼界不能短浅，志向不能平平。</span>爽籁发而清风生,纤歌凝而白云遏。音乐伴随我人生各个时刻，喜欢感古人之感，想古人只想，享受感情融入当时古人心境的那一瞬。</p>
